Fix compile warning.